--- a/lima.yaml
+++ b/lima.yaml
@@ -72,7 +72,7 @@ provision:
       cd /home/user/cthon04
       sudo -u user make CFLAGS="-DLINUX -DHAVE_SOCKLEN_T -DGLIBC=22 -DMMAP -DSTDARG $(pkg-config --cflags libtirpc)" LIBS="-ltirpc -lnsl -lm"
       # disable chmod 0 test, as we're running in userland without CAP_DAC_OVERRIDE
-      sed -i 's/^TMPDIR= \\.\\/op_chmod$/# TMPDIR= .\\/op_chmod/' /home/user/cthon04/special/runtests.wrk
+      sed -i '/op_chmod$/d' /home/user/cthon04/special/runtests.wrk
       sudo -u user bash -lc 'cd "$HOME/pjdfstest" && autoreconf -ifs && ./configure && make pjdfstest'
       sudo chown root:root domount
       sudo chmod +s domount
