--- a/lima.yaml
+++ b/lima.yaml
@@ -46,13 +46,13 @@ provision:
     path: /etc/systemd/system/fernfs.service
     content: |
       [Unit]
-      Description=fernfs mirrorfs server
+      Description=fernfs server
       After=network.target
 
       [Service]
       User=user
       WorkingDirectory=/mnt/app
-      ExecStart=/mnt/app/target/debug/examples/mirrorfs /opt/fernfs
+      ExecStart=/mnt/app/target/debug/fernfs /opt/fernfs
       Restart=on-failure
 
       [Install]
@@ -69,7 +69,7 @@ provision:
 
       sudo -Hu user bash -lc 'curl https://sh.rustup.rs -sSf | sh -s -- -y'
       sudo -Hu user bash -lc 'source "$HOME/.cargo/env" && rustup toolchain install 1.83.0'
-      sudo -Hu user bash -lc 'source "$HOME/.cargo/env" && cd /mnt/app && cargo build --examples'
+      sudo -Hu user bash -lc 'source "$HOME/.cargo/env" && cd /mnt/app && cargo build --bin fernfs'
 
       cd /home/user
       sudo -u user git clone https://github.com/phdeniel/cthon04
